@@ -1,3 +1,14 @@
+2006-08-13  Lillian Angel  <langel@redhat.com>
+
+	* gnu/testlet/java/awt/dnd/DnDTest.java:
+	Added more fields
+	(test): Added more checks.
+	(actionPerformed): Set appropriate field to true;
+	(dragExit): Likewise.
+	(dropActionChanged): Likewise.
+	(dragExit): Likewise.
+	(dropActionChanged): Likewise.
+
 2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/testlet/gnu/java/security/TestOfPR28678.java (FakeProvider): Added
